Force vertical scrollbar to be displayed, to prevent the feeling of the view moving around (which is caused by the selection view appearing / disappearing).

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,10 @@
 $iconSpritePath: "../images/glyphicons-halflings.png";
 $iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";
 
+body {
+  overflow-y: scroll;
+}
+
 .stack > *:not(.active) {
   display: none;
 }
